--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
 		"svelte": "^3.54.0",
 		"vite": "^4.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@sveltejs/adapter-static": "^2.0.1"
+	}
 }
